--- a/sass/style.css
+++ b/sass/style.css
@@ -154,4 +154,18 @@ table {
 .navbar__link {
   text-decoration: none;
   color: inherit;
+}
+
+.anecdote-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.anecdote-container__button {
+  margin: 1rem 0;
+  padding: 0.5rem 2rem;
+}
+
+.anecdote-content {
+  background-color: darkgray;
 }/*# sourceMappingURL=style.css.map */
