--- a/sass/style.css
+++ b/sass/style.css
@@ -168,4 +168,14 @@ table {
 
 .anecdote-content {
   background-color: darkgray;
+  width: 50%;
+  height: 300px;
+  border-radius: 1rem;
+  text-align: center;
+}
+.anecdote-content__title {
+  color: #ea7852;
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
