--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,8 +20,17 @@
         text-decoration: none;
         color: inherit;
     }
+    &__darkmode {
+        margin-left: auto;
+        margin-right: 1rem;
+    }
 }
-
+.dark-background {
+    background-color: black;
+}
+.light-background {
+    background-color: white;
+}
 .anecdote-container {
     display: flex;
     flex-direction: column;
