--- a/sass/reset.css
+++ b/sass/reset.css
@@ -131,63 +131,4 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-.navbar {
-  background-color: #ea7852;
-  display: flex;
-  align-items: center;
-}
-.navbar__title {
-  color: white;
-  padding: 1rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.navbar__list {
-  display: flex;
-  margin-left: 1rem;
-}
-.navbar__item {
-  padding: 1rem;
-}
-.navbar__link {
-  text-decoration: none;
-  color: inherit;
-}
-.navbar__darkmodeImg {
-  margin-left: auto;
-  margin-right: 1rem;
-}
-
-.dark-background {
-  background-color: black;
-}
-
-.dark-font {
-  color: white;
-}
-
-.anecdote-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.anecdote-container__button {
-  margin: 1rem 0;
-  padding: 0.5rem 2rem;
-}
-
-.anecdote-content {
-  background-color: darkgray;
-  width: 50%;
-  height: 300px;
-  border-radius: 1rem;
-  text-align: center;
-}
-.anecdote-content__title {
-  color: #ea7852;
-  margin: 1rem 0;
-  font-size: 1.5rem;
-  font-weight: bold;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=reset.css.map */
