--- a/sass/style.css
+++ b/sass/style.css
@@ -190,4 +190,18 @@ table {
   margin: 1rem 0;
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+.races-container .race-left {
+  padding: 2rem;
+}
+.races-container .race-left__head {
+  display: flex;
+  align-items: center;
+}
+.races-container .race-left__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #ea7852;
+  margin-right: 1rem;
 }/*# sourceMappingURL=style.css.map */
