--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,3 +53,19 @@
         font-weight: bold;
     }
 }
+
+.races-container {
+    .race-left {
+        padding: 2rem;
+        &__head {
+            display: flex;
+            align-items: center;
+        }
+        &__title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #ea7852;
+            margin-right: 1rem;
+        }
+    }
+}
