--- a/sass/style.css
+++ b/sass/style.css
@@ -192,8 +192,12 @@ table {
   font-weight: bold;
 }
 
-.races-container .race-left {
+.races-container {
+  display: flex;
   padding: 2rem;
+}
+.races-container .race-left {
+  width: 50%;
 }
 .races-container .race-left__head {
   display: flex;
@@ -204,4 +208,13 @@ table {
   font-weight: bold;
   color: #ea7852;
   margin-right: 1rem;
+}
+.races-container .race-left__breeds li {
+  border: 1px solid red;
+  block-size: 40%;
+}
+.races-container .race-right {
+  border: 1px solid red;
+  block-size: 40%;
+  width: 40%;
 }/*# sourceMappingURL=style.css.map */
